# kimm_orchard_sim

./: .gitignore  CMakeLists.txt  README.md  commda.txt  package.xml  setup.cfg  setup.py
LIO-SAM/: CMakeLists.txt  package.xml
LIO-SAM/config/: params.yaml  params_of_localization_mode.yaml  params_orchard.yaml  params_sim.yaml  params_temp_for_rosbag.yaml  robot.urdf.xacro  robot_localization_of_localization_mode_param.yaml  robot_localization_params.yaml  rviz2.rviz
LIO-SAM/launch/: debug.launch.py  run.launch.py  run_loc.launch.py
LIO-SAM/src/: GPSConverter.cpp  imageProjection.cpp  imuPreintegration.cpp  mapOptimizationLocalization.cpp  mapOptmization.cpp
config/: controller.yaml  sensor_params.yaml
control_4ws/: CMakeLists.txt
control_4ws/control_4ws/: CMakeLists.txt  package.xml
control_4ws/src/: car_control.cpp  narrow_v1.xml
docker/: Dockerfile  install.sh
kimm_orchard_sim/: CMakeLists.txt  package.xml  setup.cfg  setup.py
kimm_orchard_sim/config/: sensor_params.yaml
kimm_orchard_sim/docker/: Dockerfile  create_docker.sh  docker_run.sh  install.sh  run_command.sh
kimm_orchard_sim/docker/map_file/real_world_map/summer_map/: CornerMap.pcd  SurfMap.pcd  initial_LLA_orientation  trajectory.pcd  transformations.pcd
kimm_orchard_sim/docker/map_file/tree_pcd/: tree_gps.pcd
kimm_orchard_sim/launch/: gazebo.launch.py  slam_nav.launch.py
kimm_orchard_sim/map/urdf/: orchard_geometry.urdf
kimm_orchard_sim/models/013_apple/: apple.sdf
kimm_orchard_sim/models/aws_robomaker_warehouse_WallB_01/: model.sdf
kimm_orchard_sim/rviz/: entire_setup.rviz
kimm_orchard_sim/scripts/: goal_pose_flag.cpp  keyboard_teleop.py  mappub.py  pub_states.py  ranger_controller_key.py  state_machine.cpp  utm_publisher.py
kimm_orchard_sim/scripts/path_debug/: local_path_publisher.py  path_publisher.py
kimm_orchard_sim/urdf/: ranger_mini.urdf  ranger_mini.xacro
kimm_orchard_sim/urdf/sensors/: VLP-32.urdf.xacro  gps.xacro  imu.xacro
kimm_orchard_sim/worlds/: apple_world.sdf  wall.sdf
launch/: gazebo.launch.py
pcd_cal/: CMakeLists.txt  package.xml
rviz/: entire_setup.rviz
scripts/: keyboard_joy_node.py  keyboard_teleop.py  ranger_controller.py  set_entity_state.py
urdf/: ranger_mini copy.xacro  ranger_mini.gazebo.xacro  ranger_mini.xacro
worlds/: empty.sdf
(+45 files in other folders)
